# static

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pipeline.json  plan.md  walkthrough.md
docs/: ADDON_GUIDE.md  ARCHITECTURE.md  ASCII_MASK_OVERLAY.md  BEHAVIORS.md  BEHAVIOR_HOST.md  CONFIG_V2.md  FACE_TRACKING_LITE.md  FILTERS.md  FREEZE_REVIEW.md  GROUP3.md  RUNNER_STEP1.md  RUNNER_STEP2.md  RUNNER_STEP3.md  RUNNER_STEP4.md  SIGNALS.md
examples/ascii_mask_overlay/: README.md  manifest.toml
examples/ascii_mask_overlay/shaders/: ascii_mask.wgsl
examples/behavior_counter/: README.md  manifest.toml
examples/behavior_time/: README.md  manifest.toml
examples/external_shader_signal/: README.md  manifest.toml
examples/external_shader_signal/shaders/: wave.wgsl
examples/face_tracking_lite/: README.md  manifest.toml
examples/filter_signal_consume/: README.md  manifest.toml
examples/filter_signal_consume/shaders/: pulse.wgsl
examples/glitch-monitor/: README.md  manifest.toml
examples/glitch-monitor/shaders/: glitch.wgsl
src/: app.rs  audit_validation.rs  camera.rs  main.rs  smoke.rs
src/addon/: compat.rs  error.rs  manifest.rs  mod.rs  package.rs  pipeline.rs  registry.rs  schema.rs
src/addons/: crt.rs  dot_renderer.rs  mod.rs
src/behavior/: host.rs  mod.rs  native.rs  node.rs  scheduler.rs
src/behavior/addons/: face_tracking_lite.rs  mod.rs
src/effects/: ascii.rs  mod.rs
src/engine/: globals.rs  gpu.rs  image.rs  mod.rs  reload.rs  video.rs
src/native/: handshake.rs  mod.rs  runner.rs
src/runner/: backend.rs  clock.rs  execution.rs  host.rs  inproc.rs  mock.rs  mod.rs  sandbox.rs  sandbox_linux.rs  supervisor.rs  universal.rs
src/runtime/: artifact.rs  broker.rs  context.rs  driver.rs  graph.rs  host.rs  host_api.rs  mod.rs  native.rs  packing.rs  plan.rs  policy.rs  reflection.rs  registry.rs  signals_group.rs  sink.rs  targets.rs  wasm.rs
src/shaders/: ascii_dot.wgsl  blit.wgsl  common.wgsl  crt.wgsl
src/signal/: mod.rs  schema.rs  store.rs  value.rs
src/ui/: input.rs  mod.rs  panels.rs  state.rs  widgets.rs
(+17 files in other folders)
