[package]
name = "static"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
# Offline WGSL validation in tests (same compiler wgpu uses at runtime).
naga = { version = "0.20", features = ["wgsl-in"] }

[dependencies]
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
nokhwa = { version = "0.10", features = ["input-v4l"] }
bytemuck = { version = "1.16", features = ["derive"] }
image = "0.25"