[package]
name = "static"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
# Offline WGSL validation in tests (same compiler wgpu uses at runtime).
naga = { version = "0.20", features = ["wgsl-in"] }

[dependencies]
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
nokhwa = { version = "0.10", features = ["input-v4l"] }
bytemuck = { version = "1.16", features = ["derive"] }
image = "0.25"

# Addon ecosystem
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
nanoid = "0.4"