[package]
name = "static"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
# Offline WGSL validation in tests (same compiler wgpu uses at runtime).
naga = { version = "0.20", features = ["wgsl-in"] }

[dependencies]
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
nokhwa = { version = "0.10", features = ["input-v4l"] }
bytemuck = { version = "1.16", features = ["derive"] }
image = "0.25"

# Addon ecosystem
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
nanoid = "0.4"

# UI v1 — egui overlay. egui-wgpu 0.28 targets wgpu 0.20. We deliberately do
# NOT use egui-winit: its 0.28 release pins winit 0.29, which conflicts with the
# project's winit 0.30. The winit→egui input bridge is hand-rolled in ui::input.
egui = "0.28"
egui-wgpu = "0.28"

# Addon install: plain ZIP packages (no custom extension) + native file picker.
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.14"

# Native addon loading (cdylib via dlopen).
libloading = "0.8"